Prevent mask cards from horizontall overflowing
Flexbox items by default can't shrink beyond its content sizes, but
since we're ellipsizing (is that a word?) the mask address anyway,
that is fine here. Hence, we override the default min-width: 0.
Also see https://stackoverflow.com/a/38383437

--- a/frontend/src/components/dashboard/aliases/Alias.module.scss
+++ b/frontend/src/components/dashboard/aliases/Alias.module.scss
@@ -19,10 +19,6 @@ $toggleTransitionDuration: 200ms;
   &.is-disabled {
     background-color: rgba($color-white, 0.5);
   }
-
-  .controls {
-    flex-grow: 2;
-  }
 }
 
 .main-data {
@@ -32,6 +28,7 @@ $toggleTransitionDuration: 200ms;
 }
 
 .controls {
+  min-width: $content-xs;
   display: flex;
   gap: $spacing-xs;
   align-items: center;
